agrega ult cambios

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div  class="col-md-6">
-            <input type="submit" class="form-control btn btn-success" id="sendform1" value="ENVIAR">
+            <input type="submit" class="form-control btn btn-success" disabled id="sendform1" value="ENVIAR">
             </div>
             <div class="col-md-6">
             <input type="reset" class="form-control btn btn-warning" value="LIMPIAR">
